--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -7,5 +7,6 @@
 <body>
     <h1 th:text="${board.title}">Title</h1>
     <p th:text="${board.content}">Content</p>
+    <a th:href="@{/board/delete(id=${board.id})}">Delete</a>
 </body>
 </html>
