--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -8,5 +8,6 @@
     <h1 th:text="${board.title}">Title</h1>
     <p th:text="${board.content}">Content</p>
     <a th:href="@{/board/delete(id=${board.id})}">Delete</a>
+    <a th:href="@{/board/modify/{id}(id = ${board.id})}">Modify</a>
 </body>
 </html>
