게시판 페이징 처리 2

--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -26,6 +26,11 @@
                 </tr>
             </tbody>
         </table>
+        <!-- th:block >> 굳이 태그로 감쌀 필요가 없는 부분을 나타낼 때 사용하는 Thymeleaf 문법 -->
+        <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
+            <a th:if="${page != nowPage}" th:href="@{/board/list(page=${page - 1})}" th:text="${page}"></a>
+            <strong th:if="${page == nowPage}" th:text="${page}" style="color : red"></strong>
+        </th:block>
     </div>
 </body>
 </html>
